Lowry's branch
